Second review pass over the branch
The one that changed play: PutStickerAi.chkDrawback answered
AiAbilityDecision(0, WillPlay), and a rating of 0 is not willing - the
floor is 30. canPlayWithSubs hands a sub-ability's decision back as the
whole ability's, so a player with no sticker to place would not cast
Finishing Move at all, removal and everything. The override is gone:
SpellAbilityAi.chkDrawback already returns (100, WillPlay) for an ability
that does not target.

Correctness:

- StickerSheet listed the public zones by hand and left out Merged, Ante,
  Flashback and Junkyard, where GameAction keeps a sticker but the scan
  could not see it - so the pool would offer the same sticker again.
  Derived from ZoneType.isHidden() now, the test GameAction itself uses.
- The sheet panel went stale after a stickered card changed zone: the
  refresh ran from setStickers, while the card was in neither zone.
- addChangedSVars replaced rather than merged, so a static with both
  AddSVar$ and a sticker-granted HasAttackEffect would lose one.
- Granted keywords are trimmed, the way granted traits already were.

Simplicity and reuse:

- PutStickerEffect was the only effect in the tree draining the trigger
  queue itself; the stack does that.
- The targeting path in PutStickerAi was dead - no PutSticker script
  targets - so it and its three call sites are gone.
- Tusk and Whiskers carries AILogic$ AtOppEOT like the other three ticket
  abilities, and a sticker ability that costs mana waits for main 2:
  a sticker is permanent, so there is no reason to buy one early.

Left alone on purpose: a sticker's traits are still rebuilt on each state
check, because the cache Forge uses for granted traits resolves SVars
against the granting static rather than the sheet. The reason is now a
comment at the site.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>